err/jsonrpc2.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/jsonrpc2'...
Compiling './lib/python3.5/site-packages/jsonrpc2/cmd.py'...
***   File "./lib/python3.5/site-packages/jsonrpc2/cmd.py", line 15
    print 'runserver %s:%d' % (host, port)
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jsonrpc2/gae.py'...
***   File "./lib/python3.5/site-packages/jsonrpc2/gae.py", line 49
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jsonrpc2/paste'...
Listing './lib/python3.5/site-packages/jsonrpc2/paste/templates'...
Listing './lib/python3.5/site-packages/jsonrpc2/paste/templates/paster_jsonrpc2_template'...
Listing './lib/python3.5/site-packages/jsonrpc2/paste/templates/paster_jsonrpc2_template/+package+'...
Listing './lib/python3.5/site-packages/jsonrpc2/paste/templates/paster_jsonrpc2_template/static'...
Listing './lib/python3.5/site-packages/jsonrpc2-0.4.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
